hphp/test/slow/readonly_tdb/scope_try_1.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'ROTB\ScopeTry1\ro() returns readonly, but the caller expects a mutable value' in %s.php:31
Stack trace:
#0 {main}
